mule-user-guide/v/4.0/configuring-properties.adoc
== Creating Property Placeholders for Apps and Spring Modules

You can create property placeholders that get injected into the Mule App and Spring modules when deploying the app.

= To Configure Mule App Properties
:keywords: anypoint, studio, on premises, on premise, properties, system properties, property placeholders

In situations such as deploying a Mule app to a new environment, it is often necessary to update configurations, such as the HTTP port, that are specific to that environment. To address this need, you can create a YAML file that defines these properties. Updates to that file inject new values into a Mule app when it deploys.

The properties in the file takes this form:
----
http:
  path: service
  port: "10000"
----

You must store the file in the project directory for your Mule app:
* `/src/main/resources`

You add the YAML file to your Mule app through the Global Element called Configuration Properties. The XML for it looks like this:

`<configuration-properties file="myConfiguration.yaml" doc:name="Configuration properties" doc:id="872422be-3571-4a52-a383-a2b0e16859d7" />`

Once the attributes are configured, you can reference them using this syntax: `${http.path}` and `${http.port}`.

For example, your HTTP Listener might pass the port like this:
`<http:listener-connection host="0.0.0.0" port="${http.port}" />`

== To Set Placeholders for Spring Configurations

The Spring module allows you to use any sort of Spring configurations in Mule apps, and you can use these configurations as placeholders in Spring configuration files.

You can define the Spring property placeholders in a `.properties` file, for example, `spring-properties.properties`.

The properties in the file takes this form:
----
springPropertyA=springPropertyAValue
springPropertyB=springPropertyBValue
----

The prefix (`${`) and suffix (`}`) is fixed in Spring.

You must store the file in the project directory for your Mule app:
* `/src/main/resources`

You add the `.properties` file to your Mule app through the Global Element called Configuration Properties. The XML for this element looks like this:

`<configuration-properties file="spring-properties.properties" doc:name="Spring Property Placeholders" doc:id="07ee5c11-bc54-4d55-91b8-ce02f743cb7a" />`

////
Here, a Spring Framework configuration provides the location of Spring Property placeholders as `spring-properties.properties`.

----
<?xml version=“1.0” encoding=“UTF-8"?>
<beans xmlns=“http://www.springframework.org/schema/beans”
       xmlns:xsi=“http://www.w3.org/2001/XMLSchema-instance”
       xsi:schemaLocation=”
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd”>

  <bean class=“org.springframework.beans.factory.config.PropertyPlaceholderConfigurer”>
        <property name=“location”>
            <value>spring-properties.properties</value>
        </property>
  </bean>
</beans>
----
////

////
NOT IN RC:
== To Configure Global Properties

You can use the `<global-property>` element to set a placeholder value from within your Mule configuration, such as from within another Mule configuration file. Do not use the global property syntax to reference the values from a `.properties` file. To reference properties from a file, read the section on properties files.

[source,xml, linenums]
----
<global-property name="smtp.host" value="smtp.mail.com"/>
<global-property name="smtp.subject" value="Subject of Email"/>
----
////

// == Properties Files
//
// [WARNING]
// ====
// If you deploy multiple applications through a link:/mule-user-guide/v/4.0/shared-resources[Shared Resources] structure, don't set anything in the properties files, as there might potentially be conflicts between the various apps that share a domain. Instead, set environment variables over the scope of the deployed app, its domain, and other apps under that domain.
//
// As explained in link:/mule-user-guide/v/4.0/shared-resources[Shared Resources], in Studio you can create these variables through the *Environment tab* of the *Run Configurations menu*, reachable via the drop-down menu next to the Play button.
// ====
//
// In Anypoint Studio, you can create and edit a properties file in your project's folders.
//
// image:properties+file.png[properties+file]
//
// To load properties from a file, you can use the standard Spring element +
//  `<context:property-placeholder>`:
//
// [source,xml, linenums]
// ----
// <?xml version="1.0" encoding="UTF-8"?>
//
// <mule xmlns="http://www.mulesoft.org/schema/mule/core"
//       xmlns:context="http://www.springframework.org/schema/context"
//       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
//       xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
//           http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-4.1.xsd">
//  
// <context:property-placeholder location="smtp.properties"/>
//
// <flow name="myProject_flow1">
//     <logger message="${propertyFromFile}" doc:name="System Property Set in Property File"/>
// </flow>
// ----
//
// To load multiple properties files, separate each with commas:
//
// [source,xml]
// ----
// <context:property-placeholder location="email.properties,http.properties,system.properties"/>
// ----
//
// Since properties from files, system properties and environment variables are referred to through the same syntax, you can add a `system-properties-mode` parameter to your property placeholder to ensure that overrides work in the way that you desire. The accepted values for this parameter are ENVIRONMENT, NEVER, FALLBACK, and OVERRIDE:
//
// [source,xml, linenums]
// ----
// <context:property-placeholder location="app.properties" system-properties-mode="ENVIRONMENT"/>
// <flow name="myProject_flow1">
//     <logger message="${propertyFromFile}" doc:name="System Property Set in Property File"/>
// </flow>
// ----
//
// == Message Properties
//
// You can use placeholders to perform logic on message properties such as the header. For example, if you wanted to evaluate the content-type portion of the message header, you would specify it as `#[message.inboundProperties['Content-Type']]`. Typically, you use message property placeholders with expressions. For more information, see link:/mule-user-guide/v/4.0/mule-expression-language-mel[Mule Expression Language MEL].
//
// == System Properties
//
// The placeholder value can come from a JDK system property. If you start Mule from the command line, you would specify the properties as follows:
//
// [source,xml]
// ----
// mule -M-Dsmtp.username=JSmith -M-Dsmtp.password=ChangeMe
// ----
//
// You can also edit the system properties in `conf/wrapper.conf` if you are deploying Mule as a webapp. When running Mule in a container.
//
// You can also specify the server ID in the `web.xml` file as follows:
//
// [source,xml, linenums]
// ----
// <context-param>
//   <param-name>mule.serverId</param-name>
//   <param-value>MyServer</param-value>
// </context-param>
// ----
//
// If you start Mule programmatically, you would specify the properties as follows before creating and starting the Mule context:
//
// [source,xml, linenums]
// ----
// System.getProperties().put("smtp.username", "JSmith");
// System.getProperties().put("smtp.password", "ChangeMe");
// ----
//
// There are also several system properties that are immutable after startup. To set these, customize the `MuleConfiguration` using the set method for the property (such as `setId` for the system ID), create a `MuleContextBuilder`, load the configuration to the builder, and then create the context from the builder.
//
// For example:
//
// [source,xml, linenums]
// ----
// SpringXmlConfigurationBuilder configBuilder = new SpringXmlConfigurationBuilder("my-config.xml");
// DefaultMuleConfiguration muleConfig = new DefaultMuleConfiguration();
// muleConfig.setId("MY_SERVER_ID");
// MuleContextBuilder contextBuilder = new DefaultMuleContextBuilder();
// contextBuilder.setMuleConfiguration(muleConfig);
// MuleContextFactory contextFactory = new DefaultMuleContextFactory();
// MuleContext muleContext = contextFactory.createMuleContext(configBuilder, contextBuilder);
// muleContext.start();
// ----
//
// For information on the set methods you can use to set system properties, see:
//
// link:http://www.mulesoft.org/docs/site/3.8.1/apidocs/org/mule/config/DefaultMuleConfiguration.html[org.mule.config.DefaultMuleConfiguration]
//
//
// === Setting System Properties in Anypoint Studio
//
// You can also add properties when you launch your project on Anypoint Studio, through the Run Configurations menu:
//
// . Right-click your project in Package Explorer.
// . Click *Run As* > *Run Configurations*.
// . Pick the *Arguments* tab.
// . Add your arguments to the *VM arguments* field, preceding property names with *-D*
// +
// image:Arguments+Tab.png[Arguments+Tab]
// +
// Your properties are now available each time you deploy your app through Studio. You can then reference them with the following syntax:
// +
// [source,xml]
// ----
// <logger message="${propertyFromJVMArg}" doc:name="System Property Set in Studio through JVM args"/>
// ----
//
// == Environment Variables
//
// Environment variables can be defined in various different ways, there are also several ways to access these from your apps. Regardless of how an environment variable is defined, the recommended way to reference it is through the following syntax:
//
// [source,xml]
// ----
// ${variableName}
// ----
//
// === Environment Variables From the OS
//
// To reference a variable that is defined in the OS, you can simply use the following syntax:
//
// [source,xml]
// ----
// <logger message="${USER}" doc:name="Environment Property Set in OS" />
// ----
//
// === Setting Environment Variables in Anypoint Studio
//
// You can set variables in Studio through the Run Configuration menu:
//
// . Right-click your project in Package Explorer.
// . Select *Run As* > *Run Configurations*.
// . Pick the Environment tab.
// . Click the *New* button and assign your variable a name and value.
// +
// image:Environment+Tab.png[Environment+Tab]
//
// Your variable is now available each time you deploy through Studio. You can reference it with the following syntax:
//
// [source,xml]
// ----
// <logger message="${TEST_ENV_VAR}" doc:name="Environment Property Set in Studio"/>
// ----
//
// NOTE: The syntax makes no distinction between when you're referencing a variable in the OS and a variable defined here. In case names overlap, there's a radio button you can select when creating these variables that lets you define whether these variables overrides the original OS ones or not.
//
// image:Environment+Tab2.png[Environment+Tab2]
//
// == Setting Properties Values in CloudHub
//
// If you deploy your application to link:/cloudhub[CloudHub], you can also set properties through the Runtime Manager console. These can be defined when link:/runtime-manager/deploying-to-cloudhub[Deploying to CloudHub], or on an link:/runtime-manager/managing-cloudhub-applications[already running CloudHub application].
//
// NOTE: If you also have the same variables set in the `mule-app.properties` file inside your application, the environment variables you set here in the console always override the values in 'mule-app.properties' when your application deploys.
//
// To create an environment variable or application property:
//
// . Log in to your link:https://anypoint.mulesoft.com/#/signin[Anypoint Platform] account.
// . Click *CloudHub*.
// . Either click *Deploy Application* to deploy a new application, or select a running application and click *Manage Application*.
// . Select the *Properties* tab in the *Settings* section.
//
// See link:/runtime-manager/managing-cloudhub-applications[Managing CloudHub applications] and link:/runtime-manager/secure-application-properties[Secure Application Properties] for more details.
//
// == See Also
//
// * Read more about mule messages and their properties in our link:http://blogs.mulesoft.com/dev/anypoint-platform-dev/mule-school-the-mulemessage-property-scopes-and-variables/[Mule School: The MuleMessage, Property Scopes, and Variables].
// * link:/mule-user-guide/v/4.0/deploying-to-multiple-environments[Deploying to Multiple Environments]
// * link:http://training.mulesoft.com[MuleSoft Training]
// * link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
// * link:http://blogs.mulesoft.com[MuleSoft Blogs]
// * link:http://forums.mulesoft.com[MuleSoft's Forums]
